--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@
   <ul style="list-style: none;">
     <li><strong>Faster Algorithms for Longest Common Substring</strong> [<a href="https://arxiv.org/abs/2105.03106">arxiv</a>]
     <br>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski<br> <a href="http://algo2021.tecnico.ulisboa.pt/ESA2021/">ESA 2021</a>.</li>
-    <li><strong>An Almost Optimal Edit Distance Oracle</strong> [<a href="https://doi.org/10.4230/LIPIcs.ICALP.2021.48">doi</a>] [<a href="https://arxiv.org/abs/2103.03294">arxiv</a>] [<a href="slides/ED_Oracle.pdf">slides</a>]
+    <li><strong>An Almost Optimal Edit Distance Oracle</strong> [<a href="https://doi.org/10.4230/LIPIcs.ICALP.2021.48">doi</a>] [<a href="https://arxiv.org/abs/2103.03294">arxiv</a>] [<a href="slides/ED_Oracle.pdf">slides</a>] [<a href="https://www.youtube.com/watch?v=Rg_54bhl0Ug&ab_channel=ICALP2021">talk</a>]
     <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br> <a href="http://easyconferences.eu/icalp2021/">ICALP 2021</a>: 48:1–48:20.</li>
     <li><strong>Internal Shortest Absent Word Queries</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2021.6">doi</a>] 
     <br>G. Badkobeh, P. Charalampopoulos, S. P. Pissis<br>  <a href="http://cpm2021.ii.uni.wroc.pl/">CPM 2021</a>: 6:1–6:18.</li>
