--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
-    <li><strong>Faster Algorithms for Longest Common Substring</strong> [<a href="https://arxiv.org/abs/2105.03106">arxiv</a>]
+    <li><strong>Faster Algorithms for Longest Common Substring</strong> [<a href="https://doi.org/10.4230/LIPIcs.ESA.2021.30">doi</a>] [<a href="https://arxiv.org/abs/2105.03106">arxiv</a>]
     <br>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski<br> <a href="http://algo2021.tecnico.ulisboa.pt/ESA2021/">ESA 2021</a>: 30:1-30:17.</li>
     <li><strong>An Almost Optimal Edit Distance Oracle</strong> [<a href="https://doi.org/10.4230/LIPIcs.ICALP.2021.48">doi</a>] [<a href="https://arxiv.org/abs/2103.03294">arxiv</a>] [<a href="slides/ED_Oracle.pdf">slides</a>] [<a href="https://www.youtube.com/watch?v=Rg_54bhl0Ug&ab_channel=ICALP2021">talk</a>]
     <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br> <a href="http://easyconferences.eu/icalp2021/">ICALP 2021</a>: 48:1–48:20.</li>
