--- a/publications.html
+++ b/publications.html
@@ -81,6 +81,8 @@
   <h2>Journal papers</h2>
   <!--<ol reversed> or <reversed ol>, </ol> for numbering-->
   <ul style="list-style: none;">
+    <li><strong>Fault-Tolerant Distance Labeling for Planar Graphs</strong> [<a href="https://doi.org/10.1016/j.tcs.2022.03.020">doi</a>] [<a href="https://arxiv.org/abs/2102.07154">arxiv</a>]
+    <br>A. Bar-Natan, P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br> Theoretical Computer Science (2022).</li>
     <li><strong>Exact Distance Oracles for Planar Graphs with Failing Vertices</strong> [<a href="https://doi.org/10.1145/3511541">doi</a>] [<a href="https://arxiv.org/abs/1807.05968">arxiv</a>]<br>P. Charalampopoulos, S. Mozes, B. Tebeka<br> ACM Transactions on Algorithms (2022).</li>
     <li><strong>Efficient Computation of Sequence Mappability</strong> [<a href="https://doi.org/10.1007/s00453-022-00934-y">doi</a>] [<a href="https://arxiv.org/abs/1807.11702">arxiv</a>]<br>P. Charalampopoulos, C. S. Iliopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski, J. Straszy&#324ski<br> Algorithmica (2022).</li>
     <li><strong>Single-Source Shortest Paths and Strong Connectivity in Dynamic Planar Graphs</strong> [<a href="https://doi.org/10.1016/j.jcss.2021.09.008">doi</a>] [<a href="papers/Dyn_SSSP_SCC.pdf">pdf</a>] [<a href="slides/Dyn_SSSP_SCC.pdf">slides</a>] [<a href="https://www.youtube.com/watch?v=sG7KsfrxbKA&ab_channel=ConferenceALGO2020">talk</a>]<br>P. Charalampopoulos, A. Karczmarz<br>  Journal of Computer and System Sciences, Volume 124, Pages 97-111 (2022). </li>
