--- a/publications.html
+++ b/publications.html
@@ -82,7 +82,7 @@
   <h2>Journal papers</h2>
   <!--<ol reversed> or <reversed ol>, </ol> for numbering-->
   <ul style="list-style: none;">
-    <li><strong>Internal Shortest Absent Word Queries in Constant Time and Linear Space</strong> [<a href="https://doi.org/10.1016/j.tcs.2022.04.029">doi</a>] [<a href="https://arxiv.org/abs/2106.01763">arxiv</a>]<br>G. Badkobeh, P. Charalampopoulos, D. Kosolobov, S. P. Pissis<br> Theoretical Computer Science (2022).</li>
+    <li><strong>Internal Shortest Absent Word Queries in Constant Time and Linear Space</strong> [<a href="https://doi.org/10.1016/j.tcs.2022.04.029">doi</a>] [<a href="https://arxiv.org/abs/2106.01763">arxiv</a>]<br>G. Badkobeh, P. Charalampopoulos, D. Kosolobov, S. P. Pissis<br> Theoretical Computer Science 922: 271-282 (2022).</li>
     <li><strong>Fault-Tolerant Distance Labeling for Planar Graphs</strong> [<a href="https://doi.org/10.1016/j.tcs.2022.03.020">doi</a>] [<a href="https://arxiv.org/abs/2102.07154">arxiv</a>]
     <br>A. Bar-Natan, P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br> Theoretical Computer Science 918: 48-59 (2022).</li>
     <li><strong>Efficient Computation of Sequence Mappability</strong> [<a href="https://doi.org/10.1007/s00453-022-00934-y">doi</a>] [<a href="https://arxiv.org/abs/1807.11702">arxiv</a>]<br>P. Charalampopoulos, C. S. Iliopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski, J. Straszy&#324ski<br> Algorithmica 84(5): 1418–1440 (2022).</li>
