--- a/publications.html
+++ b/publications.html
@@ -36,6 +36,8 @@
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
+    <li><strong>Approximate Circular Pattern Matching</strong>
+    <br>P. Charalampopoulos, T. Kociumaka, J. Radoszewski, S. P. Pissis, W. Rytter, T. Wale&#324, W. Zuba<br>  <a href="https://algo2022.eu/esa/">ESA 2022</a>.</li>
     <li><strong>Longest Palindromic Substring in Sublinear Time</strong> [<a href="https://doi.org/10.4230/LIPIcs.CPM.2022.20">doi</a>]<br> P. Charalampopoulos, S. P. Pissis, J. Radoszewski<br> <a href="https://www.stringology.org/event/CPM2022/">CPM 2022</a>: 20:1–20:9.</li>
     <li><strong>Pattern Masking for Dictionary Matching</strong> [<a href="https://doi.org/10.4230/LIPIcs.ISAAC.2021.65">doi</a>] [<a href="https://arxiv.org/abs/2006.16137">arxiv</a>] <br> P. Charalampopoulos, H. Chen, P Christen, G. Loukides, N. Pisanti, S. P. Pissis, J. Radoszewski<br> <a href="https://tcs.inf.kyushu-u.ac.jp/isaac2021/">ISAAC 2021</a>: 65:1-65:19.</li>
     <li><strong>Faster Algorithms for Longest Common Substring</strong> [<a href="https://doi.org/10.4230/LIPIcs.ESA.2021.30">doi</a>] [<a href="https://arxiv.org/abs/2105.03106">arxiv</a>]
