--- a/teaching.html
+++ b/teaching.html
@@ -31,8 +31,8 @@
 
     <div id="content">
         <h2>Birkbeck, University of London</h2>
-        <br></br>
-        <p>In the summer term, Irene Muzi and I will be teaching <a href="https://www.bbk.ac.uk/courses/modules/buci/BUCI087H4">Software and Programming I</a>..</p>
+        <br>
+        <p>In the summer term, Irene Muzi and I will be teaching <a href="https://www.bbk.ac.uk/courses/modules/buci/BUCI087H4">Software and Programming I</a>.</p>
       </div>
 
     <div id="content">
