--- a/teaching.html
+++ b/teaching.html
@@ -42,8 +42,7 @@
 
     <div id="content">
         <h2>Birkbeck, University of London</h2>
-        <br>
-        <p>In the summer term, Irene Muzi and I will be teaching <a href="https://www.bbk.ac.uk/courses/modules/buci/BUCI087H4">Software and Programming I</a>.</p>
+        <p>In the summer term, Irene Muzi and I will be teaching <strong><a href="https://www.bbk.ac.uk/courses/modules/buci/BUCI087H4">Software and Programming I</a></strong>.</p>
       </div>
 
     <div id="content">
