--- a/activities.html
+++ b/activities.html
@@ -42,6 +42,8 @@
     <div id="content">
   <h2>Reviewing Duties</h2>
       <p>Conferences:
+        <a href='https://siam.org/conferences/cm/conference/soda23'>SODA 2023</a>,
+        <a href='https://isa.hanyang.ac.kr/isaac2022/'>ISAAC 2022</a>,
         <a href='https://algo2022.eu/esa/'>ESA 2022</a>,
         <a href='https://www.stringology.org/event/CPM2022/'>CPM 2022</a>,
         <a href='https://www.cristal.univ-lille.fr/spire2021/'>SPIRE 2021</a>,
