--- a/publications.html
+++ b/publications.html
@@ -93,7 +93,7 @@
   <h2>Journal papers</h2>
   <!--<ol reversed> or <reversed ol>, </ol> for numbering-->
   <ul style="list-style: none;">
-    <li><strong>Almost Optimal Exact Distance Oracles for Planar Graphs</strong>
+    <li><strong>Almost Optimal Exact Distance Oracles for Planar Graphs</strong> [<a href="papers/Distance_Oracles_JV.pdf">pdf</a>]
     <br>P. Charalampopoulos, P. Gawrychowski, Y. Long, S. Mozes, S. Pettie, O. Weimann, C. Wulff-Nilsen<br> Journal of the ACM.</li>
     <li><strong>Internal Shortest Absent Word Queries in Constant Time and Linear Space</strong> [<a href="https://doi.org/10.1016/j.tcs.2022.04.029">doi</a>] [<a href="https://arxiv.org/abs/2106.01763">arxiv</a>]<br>G. Badkobeh, P. Charalampopoulos, D. Kosolobov, S. P. Pissis<br> Theoretical Computer Science 922: 271-282 (2022).</li>
     <li><strong>Fault-Tolerant Distance Labeling for Planar Graphs</strong> [<a href="https://doi.org/10.1016/j.tcs.2022.03.020">doi</a>] [<a href="https://arxiv.org/abs/2102.07154">arxiv</a>]
